@@ -62,3 +62,10 @@ update index_types set indexer_class='cinnamon.index.indexer.DescendingReverseCo
 update index_types set indexer_class='cinnamon.index.indexer.DescendingReverseStringIndexer' where name='xpath.descending_reverse_string_indexer';
 update index_types set indexer_class='cinnamon.index.indexer.DefaultIndexer' where name='xpath.string_indexer';
 update index_types set va_provider_class = 'cinnamon.index.valueAssistance.DefaultProvider';
+
+alter table change_triggers rename column command to action;
+alter table change_triggers add column controller character varying(255) not null default 'cinnamon';
+update change_trigger_types set trigger_class='cinnamon.trigger.impl.RelationChangeTrigger';
+
+--- test insert:
+insert into change_triggers values(6,true,0,100,1,'newVersion',true,true,'<config />', 'osd');
